# AIGatekeeper

./: .gitignore  README.md  automate_mcp.py  install.sh  pyproject.toml
.github/workflows/: ci.yml
core/: CMakeLists.txt  build.sh
core/bindings/: pyag.cpp
core/cmake/: Findre2.cmake
core/include/: injection.h  sanitizer.h  scanner.h
core/src/: injection.cpp  sanitizer.cpp  scanner.cpp
core/tests/: test_core.cpp
src/: __init__.py  cli.py  mcp_server.py
src/detector/: __init__.py  zombie_detector.py
src/mcps/: mcp_system_monitor.py
src/sanitizer/: __init__.py
templates/: mcp_basic.py.template
